--- a/examples/systems/customers-system.yaml
+++ b/examples/systems/customers-system.yaml
@@ -1,8 +1,8 @@
 apiVersion: backstage.io/v1alpha1
 kind: System
 metadata:
-  name: audio-playback
-  description: Audio playback system
+  name: customers-system
+  description: Customers system
 spec:
   owner: team-c
-  domain: playback
+  domain: customers
