--- a/examples/all-apis.yaml
+++ b/examples/all-apis.yaml
@@ -6,5 +6,5 @@ metadata:
 spec:
   targets:
     - ./apis/hello-world-api.yaml
-    - ./apis/petstore-api.yaml
-    - ./apis/streetlights-api.yaml
+    - ./apis/wayback-archive-api.yaml
+    - ./apis/wayback-search-api.yaml
