--- a/examples/all-domains.yaml
+++ b/examples/all-domains.yaml
@@ -2,8 +2,8 @@ apiVersion: backstage.io/v1alpha1
 kind: Location
 metadata:
   name: example-domains
-  description: A collection of all Backstage example domains
+  description: A collection of example domains
 spec:
   targets:
-    - ./domains/engineers-domain.yaml
-    - ./domains/test-domain.yaml
+    - ./domains/employees-domain.yaml
+    - ./domains/customers-domain.yaml
