--- a/examples/all-resources.yaml
+++ b/examples/all-resources.yaml
@@ -2,7 +2,7 @@ apiVersion: backstage.io/v1alpha1
 kind: Location
 metadata:
   name: example-resources
-  description: A collection of all Backstage example resources
+  description: A collection of all example resources
 spec:
   targets:
-    - ./resources/artists-db-resource.yaml
+    - ./resources/employees-db-resource.yaml
