--- a/examples/all-systems.yaml
+++ b/examples/all-systems.yaml
@@ -2,9 +2,8 @@ apiVersion: backstage.io/v1alpha1
 kind: Location
 metadata:
   name: example-systems
-  description: A collection of all Backstage example systems
+  description: A collection of all example systems
 spec:
   targets:
-    - ./systems/artist-engagement-portal-system.yaml
-    - ./systems/audio-playback-system.yaml
-    - ./systems/testing-system.yaml
+    - ./systems/employees-portal-system.yaml
+    - ./systems/customers-system.yaml
