--- a/examples/roadie/team-a-group.yaml
+++ b/examples/roadie/team-a-group.yaml
@@ -9,7 +9,7 @@ spec:
     # Intentional no displayName for testing
     email: team-a@example.com
     picture: https://avatars.dicebear.com/api/identicon/team-a@example.com.svg?background=%23fff&margin=25
-  parent: qa
+  parent: backstage
   children: []
 ---
 apiVersion: backstage.io/v1alpha1
@@ -18,7 +18,7 @@ metadata:
   name: breanna.davison
 spec:
   profile:
-    displayName: Janelle Dawe
+    # Intentional no displayName for testing
     email: breanna-davison@example.com
     picture: https://avatars.dicebear.com/api/avataaars/breanna-davison@example.com.svg?background=%23fff
   memberOf: [team-a]
