--- a/examples/roadie/team-c-group.yaml
+++ b/examples/roadie/team-c-group.yaml
@@ -9,7 +9,7 @@ spec:
     displayName: Team C
     email: team-c@example.com
     picture: https://avatars.dicebear.com/api/identicon/team-c@example.com.svg?background=%23fff&margin=25
-  parent: boxoffice
+  parent: marketinf
   children: []
 ---
 apiVersion: backstage.io/v1alpha1
