--- a/examples/roadie/team-d-group.yaml
+++ b/examples/roadie/team-d-group.yaml
@@ -9,7 +9,7 @@ spec:
     displayName: Team D
     email: team-d@example.com
     picture: https://avatars.dicebear.com/api/identicon/team-d@example.com.svg?background=%23fff&margin=25
-  parent: boxoffice
+  parent: marketing
   children: []
 ---
 apiVersion: backstage.io/v1alpha1
