--- a/examples/systems/employees-portal-system.yaml
+++ b/examples/systems/employees-portal-system.yaml
@@ -1,10 +1,10 @@
 apiVersion: backstage.io/v1alpha1
 kind: System
 metadata:
-  name: artist-engagement-portal
-  description: Everything related to artists
+  name: employees-portal
+  description: Everything related to employees
   tags:
     - portal
 spec:
   owner: team-a
-  domain: artists
+  domain: employees
