--- a/examples/all-apis.yaml
+++ b/examples/all-apis.yaml
@@ -2,7 +2,7 @@ apiVersion: backstage.io/v1alpha1
 kind: Location
 metadata:
   name: example-apis
-  description: A collection of all Backstage example APIs
+  description: A collection of demo APIs.
 spec:
   targets:
     - ./apis/hello-world-api.yaml
