--- a/examples/components/wayback-search-component.yaml
+++ b/examples/components/wayback-search-component.yaml
@@ -6,7 +6,7 @@ metadata:
 spec:
   type: service
   lifecycle: production
-  owner: team-a
+  owner: team-alpha
   providesApis:
     - wayback-search
   consumesApis:
