--- a/examples/roadie/engineers-group.yaml
+++ b/examples/roadie/engineers-group.yaml
@@ -1,13 +1,13 @@
 apiVersion: backstage.io/v1alpha1
 kind: Group
 metadata:
-  name: backstage
-  description: The backstage sub-department
+  name: engineers
+  description: The engineers sub-department
 spec:
   type: sub-department
   profile:
-    displayName: Backstage
-    email: backstage@example.com
+    displayName: Engineers
+    email: roadie-engineers@example.com
     picture: https://avatars.dicebear.com/api/identicon/backstage@example.com.svg?background=%23fff&margin=25
   parent: infrastructure
-  children: [team-a, team-b]
+  children: [team-alpha, team-bravo]
