--- a/examples/roadie/marketing-group.yaml
+++ b/examples/roadie/marketing-group.yaml
@@ -9,4 +9,4 @@ spec:
     displayName: Marketing Office
     email: roadie-marketing@example.com
   parent: infrastructure
-  children: [team-c, team-d]
+  children: [team-charlie, team-delta]
