--- a/examples/roadie/team-delta-group.yaml
+++ b/examples/roadie/team-delta-group.yaml
@@ -1,14 +1,14 @@
 apiVersion: backstage.io/v1alpha1
 kind: Group
 metadata:
-  name: team-d
+  name: team-delta
   description: Team D
 spec:
   type: team
   profile:
     displayName: Team D
-    email: team-d@example.com
-    picture: https://avatars.dicebear.com/api/identicon/team-d@example.com.svg?background=%23fff&margin=25
+    email: team-delta@example.com
+    picture: https://avatars.dicebear.com/api/identicon/team-delta@example.com.svg?background=%23fff&margin=25
   parent: marketing
   children: []
 ---
@@ -21,7 +21,7 @@ spec:
     displayName: Eva MacDowell
     email: eva-macdowell@example.com
     picture: https://avatars.dicebear.com/api/avataaars/eva-macdowell@example.com.svg?background=%23fff
-  memberOf: [team-d]
+  memberOf: [team-delta]
 ---
 apiVersion: backstage.io/v1alpha1
 kind: User
@@ -32,4 +32,4 @@ spec:
     displayName: Lucy Sheehan
     email: lucy-sheehan@example.com
     picture: https://avatars.dicebear.com/api/avataaars/lucy-sheehan@example.com.svg?background=%23fff
-  memberOf: [team-d]
+  memberOf: [team-delta]
