--- a/examples/all-data.yaml
+++ b/examples/all-data.yaml
@@ -1,7 +1,7 @@
 apiVersion: backstage.io/v1alpha1
 kind: Location
 metadata:
-  name: example-apis
+  name: example-data
   description: A collection of demo data.
 spec:
   targets:
