--- a/examples/roadie/team-alpha-group.yaml
+++ b/examples/roadie/team-alpha-group.yaml
@@ -6,10 +6,11 @@ metadata:
 spec:
   type: team
   profile:
+    displayName: Team A
     # Intentional no displayName for testing
     email: team-alpha@example.com
     picture: https://avatars.dicebear.com/api/identicon/team-alpha@example.com.svg?background=%23fff&margin=25
-  parent: backstage
+  parent: engineers
   children: []
 ---
 apiVersion: backstage.io/v1alpha1
