--- a/examples/roadie/team-bravo-group.yaml
+++ b/examples/roadie/team-bravo-group.yaml
@@ -9,7 +9,7 @@ spec:
     displayName: Team B
     email: team-bravo@example.com
     picture: https://avatars.dicebear.com/api/identicon/team-bravo@example.com.svg?background=%23fff&margin=25
-  parent: backstage
+  parent: engineers
   children: []
 ---
 apiVersion: backstage.io/v1alpha1
