add titles in demo data

--- a/examples/all-components.yaml
+++ b/examples/all-components.yaml
@@ -2,6 +2,7 @@ apiVersion: backstage.io/v1alpha1
 kind: Location
 metadata:
   name: example-components
+  title: Example components
   description: A collection of all example components
 spec:
   targets:
