--- a/examples/all-systems.yaml
+++ b/examples/all-systems.yaml
@@ -2,6 +2,7 @@ apiVersion: backstage.io/v1alpha1
 kind: Location
 metadata:
   name: example-systems
+  title: Example systems
   description: A collection of all example systems
 spec:
   targets:
