--- a/examples/components/wayback-archive-ingestion-component.yaml
+++ b/examples/components/wayback-archive-ingestion-component.yaml
@@ -2,6 +2,7 @@ apiVersion: backstage.io/v1alpha1
 kind: Component
 metadata:
   name: wayback-archive-ingestion
+  title: Wayback archive ingestion
   description: Ingestion subsystem of the Wayback Archive
 spec:
   type: service
