--- a/examples/components/wayback-archive-storage-component.yaml
+++ b/examples/components/wayback-archive-storage-component.yaml
@@ -2,6 +2,7 @@ apiVersion: backstage.io/v1alpha1
 kind: Component
 metadata:
   name: wayback-archive-storage
+  title: Wayback archive storage
   description: Storage subsystem of the Wayback Archive
 spec:
   type: service
