--- a/examples/components/wayback-search-component.yaml
+++ b/examples/components/wayback-search-component.yaml
@@ -2,6 +2,7 @@ apiVersion: backstage.io/v1alpha1
 kind: Component
 metadata:
   name: wayback-search
+  title: Wayback search
   description: Search of the wayback machine
 spec:
   type: service
