--- a/examples/domains/employees-domain.yaml
+++ b/examples/domains/employees-domain.yaml
@@ -2,6 +2,7 @@ apiVersion: backstage.io/v1alpha1
 kind: Domain
 metadata:
   name: Employees
+  title: Employees domain
   description: Everything related to employees
   links:
     - url: http://example.com/domain/employees/
