--- a/examples/roadie/org.yaml
+++ b/examples/roadie/org.yaml
@@ -20,6 +20,7 @@ apiVersion: backstage.io/v1alpha1
 kind: Location
 metadata:
   name: example-groups
+  title: Example groups
   description: A collection of all group existing in the roadie org
 spec:
   targets:
