--- a/examples/all-apis.yaml
+++ b/examples/all-apis.yaml
@@ -2,6 +2,7 @@ apiVersion: backstage.io/v1alpha1
 kind: Location
 metadata:
   name: example-apis
+  title: Example APIs
   description: A collection of demo APIs.
 spec:
   targets:
