--- a/examples/all-domains.yaml
+++ b/examples/all-domains.yaml
@@ -2,6 +2,7 @@ apiVersion: backstage.io/v1alpha1
 kind: Location
 metadata:
   name: example-domains
+  title: Example domains
   description: A collection of example domains
 spec:
   targets:
