--- a/examples/apis/hello-world-api.yaml
+++ b/examples/apis/hello-world-api.yaml
@@ -2,6 +2,7 @@ apiVersion: backstage.io/v1alpha1
 kind: API
 metadata:
   name: hello-world
+  title: Hello World API
   description: Hello World example for gRPC
 spec:
   type: grpc
