--- a/examples/roadie.yaml
+++ b/examples/roadie.yaml
@@ -2,6 +2,7 @@ apiVersion: backstage.io/v1alpha1
 kind: Location
 metadata:
   name: roadie
+  title: Roadie groups
   description: A collection of all the groups contained as an example in demo data.
 spec:
   targets:
