--- a/examples/roadie/engineers-group.yaml
+++ b/examples/roadie/engineers-group.yaml
@@ -2,6 +2,7 @@ apiVersion: backstage.io/v1alpha1
 kind: Group
 metadata:
   name: engineers
+  title: Engineers group
   description: The engineers sub-department
 spec:
   type: sub-department
