--- a/examples/roadie/marketing-group.yaml
+++ b/examples/roadie/marketing-group.yaml
@@ -2,6 +2,7 @@ apiVersion: backstage.io/v1alpha1
 kind: Group
 metadata:
   name: marketing
+  title: Marketing group
   description: The marketing sub-department
 spec:
   type: sub-department
