--- a/examples/components/wayback-search-component.yaml
+++ b/examples/components/wayback-search-component.yaml
@@ -4,6 +4,9 @@ metadata:
   name: wayback-search
   title: Wayback search
   description: Search of the wayback machine
+  annotations:
+    backstage.io/techdocs-ref: dir:../techdocs/wayback-search
+    pagerduty.com/integration-key: 1cf15c07f6f440e0a8d65b7ce80be834
 spec:
   type: service
   lifecycle: production
