--- a/examples/components/wayback-archive-component.yaml
+++ b/examples/components/wayback-archive-component.yaml
@@ -4,6 +4,8 @@ metadata:
   name: wayback-archive
   title: Wayback archive
   description: Archive of the wayback machine
+  annotations:
+    github.com/project-slug: roadiehq/demo-data
 spec:
   type: service
   lifecycle: production
