--- a/examples/components/wayback-archive-storage-component.yaml
+++ b/examples/components/wayback-archive-storage-component.yaml
@@ -6,6 +6,9 @@ metadata:
   description: Storage subsystem of the Wayback Archive
   annotations:
     github.com/project-slug: roadiehq/demo-data
+  tags:
+    - java
+    - demo
 spec:
   type: service
   lifecycle: production
