--- a/examples/components/wayback-search-component.yaml
+++ b/examples/components/wayback-search-component.yaml
@@ -7,6 +7,9 @@ metadata:
   annotations:
     backstage.io/techdocs-ref: dir:../techdocs/wayback-search
     github.com/project-slug: roadiehq/demo-data
+  tags:
+    - rust
+    - demo
 spec:
   type: service
   lifecycle: production
