--- a/examples/components/wayback-archive-ingestion-component.yaml
+++ b/examples/components/wayback-archive-ingestion-component.yaml
@@ -7,7 +7,7 @@ metadata:
   annotations:
     github.com/project-slug: roadiehq/demo-data
   tags:
-    - java
+    - kotlin
     - demo
 spec:
   type: service
