--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,3 @@
 examples/* linguist-documentation=false
+
+*.typescript linguist-detectable=true *.js linguist-detectable=false *.html linguist-detectable=false *.xml linguist-detectable=false
