--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,3 @@
 examples/* linguist-documentation=false
 
-*.yaml linguist-detectable=true *.js linguist-detectable=false *.html linguist-detectable=false *.xml linguist-detectable=false
+*.js linguist-detectable=true 
